[gd_scene load_steps=9 format=3 uid="uid://dyu1i1mcwhm2e"]

[ext_resource type="Script" path="res://scenes/player_physics.gd" id="1_pxgo1"]
[ext_resource type="Shader" path="res://characters/player/ps1_camera_fade.gdshader" id="2_0ewle"]
[ext_resource type="PackedScene" uid="uid://c1vhle00xj2b8" path="res://characters/player_hands/hands_camera_3d.tscn" id="2_2obeh"]
[ext_resource type="PackedScene" uid="uid://b3p3kc4406kia" path="res://characters/player_hands/laser_pointer.tscn" id="3_niyui"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ipieo"]
radius = 0.27388
height = 1.79899

[sub_resource type="ShaderMaterial" id="ShaderMaterial_20fxv"]
shader = ExtResource("2_0ewle")
shader_parameter/alpha = null

[sub_resource type="Environment" id="Environment_7q4ol"]
background_mode = 2
background_color = Color(0.72549, 0.588235, 0.866667, 1)
background_energy_multiplier = 6.64
ambient_light_source = 3
ambient_light_color = Color(0.678431, 0.603922, 0.843137, 1)
ambient_light_energy = 2.0
reflected_light_source = 2

[sub_resource type="World3D" id="World3D_ynrj3"]
environment = SubResource("Environment_7q4ol")

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.543212, 0)
script = ExtResource("1_pxgo1")

[node name="Node3D" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(-0.994314, 0, 0.10649, 0, 1, 0, -0.10649, 0, -0.994314, 0, 0.405443, -1.93085)

[node name="player_cl" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.386517, 0)
shape = SubResource("CapsuleShape3D_ipieo")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.825654, -0.068)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head"]
light_mask = 3
visibility_layer = 3
material = SubResource("ShaderMaterial_20fxv")
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="Head/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_ynrj3")
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="hands_camera3D" parent="Head/SubViewportContainer/SubViewport" instance=ExtResource("2_2obeh")]
current = true

[node name="camera_crane" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 6.3573e-08, 0, 1, 0, -6.3573e-08, 0, 1, 0, 0, 0)

[node name="hand_raycast" type="RayCast3D" parent="Head/camera_crane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0706417, -0.189013, -0.11773)
target_position = Vector3(0, 0, -2)
collision_mask = 2
hit_from_inside = true
debug_shape_custom_color = Color(0.25098, 0.333333, 1, 1)

[node name="gun_raycast" type="RayCast3D" parent="Head/camera_crane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.55271e-15, 0.18, -0.384)
target_position = Vector3(0, 0, -100)
collision_mask = 19
debug_shape_custom_color = Color(0.878431, 0, 0.337255, 1)

[node name="SpotLight3D" type="SpotLight3D" parent="Head/camera_crane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18, 0)
light_color = Color(0, 0, 0, 1)
spot_range = 25.0
spot_angle = 30.0

[node name="Camera3D" type="Camera3D" parent="Head/camera_crane"]
transform = Transform3D(1, 0, 2.13163e-13, 0, 1, 0, -2.13163e-13, 0, 1, 0, 0.180004, 0)
rotation_order = 0
cull_mask = 1048557
current = true

[node name="laser_pointer" parent="." instance=ExtResource("3_niyui")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960557, 0)
top_level = true
visible = false
